--- a/src/main/webapp/static/pages/signUp.html
+++ b/src/main/webapp/static/pages/signUp.html
@@ -29,11 +29,11 @@
                     <!-- <input class="round" type="text" ng-model="user.panCard" name="pancard" placeholder="Enter Your Pan Card Number" required>
                     <input type="checkbox" value="Applied For PanCard" ng-model="user.panCardFlag" name="pancardFlag"> Applied or Pancard<br>
                      --><!-- <input class="round" type="text" ng-model="user.nominee" name="nominee" placeholder="Enter Your Nominee Name Here" required> -->
-                    <input class="round" type="text" placeholder="Enter Sponsor Id" ng-model="user.sponsorId" name="sponsorId" required>
-                    <input class="round" type="text" placeholder="Sponsor Name"ng-model="user.sponsorName" name="sponcerName">
+                    <input class="round" type="text" placeholder="Enter Sponsor Id" ng-model="user.sponsorId" name="sponsorId" ng-blur="getSponserName()" >
+                    <input class="round" type="text" placeholder="Sponsor Name"ng-model="user.sponsorName" name="sponcerName" disabled>
                
-                        <select  class="round" style="width:100%; height:47px;" ng-model="user.position" name="position">
-                            <option value ="" selected>SELECT POSITION</option>
+                        <select  class="round" style="width:100%; height:47px;" ng-model="user.position" name="position" >
+                            <option value ="" selected>SELECT POSITION</option>	
                             <option value ="Left">Left</option>
                             <option value ="Right">Right</option>
                         </select>
