Create Binary Tree
Change-Id: I9783396dd752091fbc5850d246c99f4b7f64d5fd

--- a/src/main/webapp/static/pages/dashboard.html
+++ b/src/main/webapp/static/pages/dashboard.html
@@ -9,3 +9,32 @@ Dashboard {{test}}
 <input type="submit" value="Create Binary" ng-click="createBinaryTree()"/>
 </body>
 </html>
+
+
+
+
+<div class="tab-container">
+            <md-tabs md-selected="selectedTab"  md-stretch-tabs="always"  >
+                <md-tab label="One">
+                    <p class="tab-content">Tab One content</p>
+                </md-tab>
+                <md-tab label="Two">
+                    <p class="tab-content">Tab Two content</p>
+                </md-tab>
+                <md-tab label="Three">
+                    <p class="tab-content">Tab Three content</p>
+                </md-tab>
+            </md-tabs>      
+        </div>
+       
+        
+        <div class="tab-change-row">
+            <md-button class="tab-btn md-raised" ng-click="changeTab()">Change Tab</md-button>    
+        </div>
+
+
+
+
+
+
+
