--- a/src/main/webapp/static/pages/loginPage.html
+++ b/src/main/webapp/static/pages/loginPage.html
@@ -10,10 +10,10 @@
 
                 <div class="container">
                     <label><b>Email</b></label>
-                    <input class="round" type="text"  ng-model="loginDetails.email" placeholder="Enter email" name="email" required>
+                    <input  type="text"  ng-model="loginDetails.email" placeholder="Enter email" name="email" required>
 
                     <label><b>Password</b></label>
-                    <input  class="round" type="password" ng-model="loginDetails.password" placeholder="Enter Password" name="psw" required>
+                    <input  type="password" ng-model="loginDetails.password" placeholder="Enter Password" name="psw" required>
                     <div class="container">  
 	                    <input type="submit" class="btn btn-success"type="submit" value="Login" />
 	                    <input type="checkbox" checked="checked" ng-model="loginDetails.isRememberMe"> Remember me
