Some changes in css
Change-Id: Idfb4c8a053475a51ceeffbf4fcf2b7aa00ad0dbd

--- a/src/main/webapp/static/pages/signUp.html
+++ b/src/main/webapp/static/pages/signUp.html
@@ -51,7 +51,7 @@
                                   </div>
                     <input class="round" type="password" placeholder="Retype Your Password Here" ng-model="SignUpCtrl.user.reTypePassword" name="reTypePassword" required>
                     <input type="checkbox" value="Terms and condition" ng-model="user.termsAndCondition">I have read given Website Details and agree to the <a href="#">Terms and Conditions</a><br>
-                    <input type="submit"class="btn btn-success"  value="Sign Up"/>
+                    <input type="submit"class="btn btn-primary"  value="Sign Up"/>
                 </form>
                 
                 </div>
