--- a/src/main/webapp/static/pages/loginPage.html
+++ b/src/main/webapp/static/pages/loginPage.html
@@ -47,7 +47,7 @@
 <div class="widget">
 <div class="login-content">
   <div class="widget-content" style="padding-bottom:0;">
-  <form method="get" action="index.html" class="no-margin">
+  <form ng-submit="login()"  class="no-margin">
                 <h3 class="form-title">Login to your account</h3>
                 
                 <fieldset>
@@ -58,7 +58,7 @@
                                 <span class="input-group-addon">
                                     <i class="icon-user"></i>
                                 </span>
-                            <input type="email" placeholder="Your Email" class="form-control input-lg" id="email">
+                            <input type="email"  ng-model="loginDetails.email" placeholder="Your Email" class="form-control input-lg" id="email">
                         </div>
 
                     </div>
@@ -70,7 +70,7 @@
                                 <span class="input-group-addon">
                                     <i class="icon-lock"></i>
                                 </span>
-                            <input type="password" placeholder="Your Password" class="form-control input-lg" id="password">
+                            <input type="password" ng-model="loginDetails.password" placeholder="Your Password" class="form-control input-lg" id="password">
                         </div>
 
                     </div>
