--- a/src/main/webapp/static/pages/profile.html
+++ b/src/main/webapp/static/pages/profile.html
@@ -10,7 +10,7 @@
                     
                               
                      <div id="box">
-                        <input type="file" id="fileInput" accept="image/*"/>
+                        <input type="file" id="fileInput" accept="image/*" name="fileInput"/>
                         <img ng-src="{{myImage}}"  style="background-color:red;"  width="100%" height="100%" />
                         </div>               
                     </div>
