--- a/src/main/webapp/static/pages/dashboard.html
+++ b/src/main/webapp/static/pages/dashboard.html
@@ -78,9 +78,15 @@
       
 				<ul  id="nav">
 					<li><a ui-sref=".profile">Profile</a></li>
-					<li><a ui-sref=".account">Account</a></li>
+					<li><a ui-sref=".account"> My Account</a></li>
 					<li><a ui-sref=".downLine" >My DownLine</a></li>
 					<li><a ui-sref=".rewards" >My Rewards</a></li>
+					<li><a ui-sref=".workHistory" >My Work History </a></li>
+					<li><a ui-sref=".todayTask" >My Today Task </a></li>
+					<li><a ui-sref=".workPayOuts" >My Work PayOuts </a></li>
+					<li><a ui-sref=".binaryPayIncome" >My Binary Income </a></li>
+					<li><a ui-sref=".directReferralPayIncome" >My Direct Referral  Income </a></li>
+					<li><a ui-sref=".totalPayIncome" >My Total Income </a></li>
 				</ul>
 			</div>
 		</div>
