Binary and Direct referral calculation done.
Change-Id: I04a79249b4f4812b58488321da844f047e0e17ad

--- a/src/main/webapp/static/pages/binaryIncome.html
+++ b/src/main/webapp/static/pages/binaryIncome.html
@@ -1,1 +1,20 @@
-<H1 style="color:white">  binary income</H1>
+<div class="widget ng-scope">
+            <div class="widget-header"> <i class="icon-user"></i>
+              <h3>Binary Income </h3>
+            </div>
+            <div class="widget-content">
+              <div class="body" >
+
+<!-- <div ui-grid="gridOptions" ui-grid-edit ui-grid-cellnav  class="myGrid"></div> -->
+<table width="100%" >
+<thead>
+<tr><th>Left Node</th><th>Right Node</th><th>Complete Binary </th><th> Total Amount</th></tr></thead>
+<tr>
+<td align="center">{{binaryIncomeDetails.leftNodeCount}}</td>
+<td>{{binaryIncomeDetails.rightNodeCount}}</td>
+<td>{{binaryIncomeDetails.childNode}}</td>
+<td>{{binaryIncomeDetails.ammount}}</td>
+</tr>
+</table>
+
+</div></div></div>
