--- a/src/main/webapp/static/pages/directReferral.html
+++ b/src/main/webapp/static/pages/directReferral.html
@@ -1,1 +1,18 @@
-<H1 style="color:white"> Direct reff</H1>
+<div class="widget ng-scope">
+            <div class="widget-header"> <i class="icon-user"></i>
+              <h3>Direct Income </h3>
+            </div>
+            <div class="widget-content">
+              <div class="body" >
+
+<!-- <div ui-grid="gridOptions" ui-grid-edit ui-grid-cellnav  class="myGrid"></div> -->
+<table width="100%" >
+<thead>
+<tr><th>Total Direct Referral </th><th> Total Amount</th></tr></thead>
+<tr>
+<td>{{binaryIncomeDetails.childNode}}</td>
+<td>{{binaryIncomeDetails.ammount}}</td>
+</tr>
+</table>
+
+</div></div></div>
