account is Done.And worked on logOut
Change-Id: Ie1eacf95a64a0abaa40b9b42e2b35a112b90c5f9

--- a/src/main/webapp/static/pages/binaryIncome.html
+++ b/src/main/webapp/static/pages/binaryIncome.html
@@ -6,14 +6,14 @@
               <div class="body" >
 
 <!-- <div ui-grid="gridOptions" ui-grid-edit ui-grid-cellnav  class="myGrid"></div> -->
-<table width="100%" >
+<table  class="tblAndRowBorder" width="100%" >
 <thead>
-<tr><th>Left Node</th><th>Right Node</th><th>Complete Binary </th><th> Total Amount</th></tr></thead>
+<tr  class="tblAndRowBorder"><th  class="tblAndRowBorder">Left Node</th><th  class="tblAndRowBorder">Right Node</th><th>Complete Binary </th><th  class="tblAndRowBorder"> Total Amount</th></tr></thead>
 <tr>
-<td align="center">{{binaryIncomeDetails.leftNodeCount}}</td>
-<td>{{binaryIncomeDetails.rightNodeCount}}</td>
-<td>{{binaryIncomeDetails.childNode}}</td>
-<td>{{binaryIncomeDetails.ammount}}</td>
+<td  class="columnText;tblAndRowBorder" >{{binaryIncomeDetails.leftNodeCount}}</td>
+<td  class="tblAndRowBorder">{{binaryIncomeDetails.rightNodeCount}}</td>
+<td  class="tblAndRowBorder">{{binaryIncomeDetails.childNode}}</td>
+<td  class="tblAndRowBorder">{{binaryIncomeDetails.ammount}}</td>
 </tr>
 </table>
 
