--- a/src/main/webapp/static/pages/directReferral.html
+++ b/src/main/webapp/static/pages/directReferral.html
@@ -6,12 +6,12 @@
               <div class="body" >
 
 <!-- <div ui-grid="gridOptions" ui-grid-edit ui-grid-cellnav  class="myGrid"></div> -->
-<table width="100%" >
-<thead>
-<tr><th>Total Direct Referral </th><th> Total Amount</th></tr></thead>
+<table width="100%"  class="tblAndRowBorder" >
+<thead  class="tblAndRowBorder">
+<tr  class="tblAndRowBorder"><th  class="tblAndRowBorder">Total Direct Referral </th><th  class="tblAndRowBorder"> Total Amount</th></tr></thead>
 <tr>
-<td>{{binaryIncomeDetails.childNode}}</td>
-<td>{{binaryIncomeDetails.ammount}}</td>
+<td  class="tblAndRowBorder">{{binaryIncomeDetails.childNode}}</td>
+<td  class="tblAndRowBorder">{{binaryIncomeDetails.ammount}}</td>
 </tr>
 </table>
 
