--- a/src/main/webapp/static/pages/totalpayment.html
+++ b/src/main/webapp/static/pages/totalpayment.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body  >
-
+<button class="btn btn-warning pull-right" ng-click="genrateCsv()" >Downloade Excel</button>
 </body>
 </html>
